<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Coffee">

    <Spinner
        android:id="@+id/sizeSp"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="184dp"
        android:entries="@array/coffee_size_array"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/quantityCofSp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:entries="@array/quantity_array"
        app:layout_constraintStart_toEndOf="@+id/sizeSp"
        app:layout_constraintTop_toTopOf="@+id/sizeSp" />

    <CheckBox
        android:id="@+id/creamCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:fontFamily="casual"
        android:text="@string/cream"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeSp" />

    <CheckBox
        android:id="@+id/syrupCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:fontFamily="casual"
        android:text="@string/syrup"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/creamCB"
        app:layout_constraintTop_toTopOf="@+id/creamCB" />

    <CheckBox
        android:id="@+id/milkCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:fontFamily="casual"
        android:text="@string/milk"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/syrupCB"
        app:layout_constraintTop_toTopOf="@+id/syrupCB" />

    <CheckBox
        android:id="@+id/whippedCreamCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="casual"
        android:text="@string/whipped_cream"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/caramelCB"
        app:layout_constraintTop_toTopOf="@+id/caramelCB" />

    <CheckBox
        android:id="@+id/caramelCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="340dp"
        android:fontFamily="casual"
        android:text="@string/caramel"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtotalTV"
        android:layout_width="126dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif"
        android:text="@string/_0_00"
        android:textColor="@color/coffee_700"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caramelCB" />

    <Button
        android:id="@+id/orderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="37dp"
        android:text="@string/add_to_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotalTV" />
</androidx.constraintlayout.widget.ConstraintLayout>