<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/sub_total"
        android:textColor="@color/coffee_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/subtotalTV"
        app:layout_constraintTop_toTopOf="@+id/subtotalTV" />

    <TextView
        android:id="@+id/salesTaxTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_0_00"
        android:textColor="@color/coffee_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/totalTxt"
        app:layout_constraintTop_toBottomOf="@+id/subtotalTV" />

    <TextView
        android:id="@+id/totalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/_0_00"
        android:textColor="@color/coffee_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/orderLV"
        app:layout_constraintTop_toBottomOf="@+id/salesTaxTxt" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textColor="@color/coffee_700"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/totalTxt" />

    <TextView
        android:id="@+id/subtotalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/_0_00"
        android:textColor="@color/coffee_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/salesTaxTxt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sales_tax"
        android:textColor="@color/coffee_700"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/salesTaxTxt" />

    <ListView
        android:id="@+id/orderLV"
        android:layout_width="321dp"
        android:layout_height="324dp"
        android:layout_marginTop="200dp"
        android:choiceMode="singleChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/removeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="removeClick"
        android:text="@string/remove"
        app:layout_constraintStart_toStartOf="@+id/orderLV"
        app:layout_constraintTop_toTopOf="@+id/orderBtn" />

    <Button
        android:id="@+id/orderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="placeOrderClick"
        android:text="@string/place_order"
        app:layout_constraintEnd_toEndOf="@+id/orderLV"
        app:layout_constraintTop_toBottomOf="@+id/orderLV" />
</androidx.constraintlayout.widget.ConstraintLayout>