<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DonutActivity">

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="116dp"
        android:onClick="addClick"
        android:text="@string/add"
        app:layout_constraintStart_toEndOf="@+id/quantityDonSp"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/quantityDonSp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="128dp"
        android:entries="@array/quantity_array"
        app:layout_constraintStart_toEndOf="@+id/typeSp"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/typeSp"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="128dp"
        android:entries="@array/donut_types_array"
        app:layout_constraintStart_toStartOf="@+id/donutLV"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/donutLV"
        android:layout_width="349dp"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        android:choiceMode="singleChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeSp">

    </ListView>

    <Button
        android:id="@+id/orderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:onClick="addToOrderClick"
        android:text="@string/add_to_order"
        app:layout_constraintStart_toEndOf="@+id/removeBtn"
        app:layout_constraintTop_toBottomOf="@+id/subtotalTV" />

    <Button
        android:id="@+id/removeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="removeClick"
        android:text="@string/remove"
        app:layout_constraintStart_toStartOf="@+id/subtotalTV"
        app:layout_constraintTop_toBottomOf="@+id/subtotalTV" />

    <TextView
        android:id="@+id/subtotalTV"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="28dp"
        android:text="@string/_0_00"
        android:textColor="@color/coffee_700"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/donutLV"
        app:layout_constraintTop_toBottomOf="@+id/donutLV" />

</androidx.constraintlayout.widget.ConstraintLayout>