<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3e5dc"
    tools:context=".StoreOrderActivity">

    <ListView
        android:id="@+id/storeOrderLV"
        android:layout_width="363dp"
        android:layout_height="384dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/orderSp"
        android:layout_width="146dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="@+id/storeOrderLV"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/total"
        android:textColor="@color/coffee_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/totalTxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/orderSp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/_0_00"
        android:textColor="@color/coffee_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/storeOrderLV"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/removeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="52dp"
        android:onClick="cancelOrder"
        android:text="@string/cancel_order"
        app:layout_constraintEnd_toEndOf="@+id/storeOrderLV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOrderLV" />

</androidx.constraintlayout.widget.ConstraintLayout>